--- a/src/components/ContactList/ContactList.module.css
+++ b/src/components/ContactList/ContactList.module.css
@@ -13,10 +13,10 @@
 }
 
 .boxList {
-  /* width: 300px; */
   margin: 10px auto;
   padding: 10px;
   display: flex;
+  justify-content: center;
   flex-wrap: wrap;
   gap: 10px;
 }
